--- a/questions.css
+++ b/questions.css
@@ -1,8 +1,5 @@
 body {
 	background: #f0ffff;
-	background-image: url("photos/marathon-switzer-apimages.jpg"), url("photos/gertrude-ederle-nydailynews-via-gettyimages.jpeg") ;
-	background-repeat: no-repeat;
-	background-position: center 10px;
 	font: 12pt/1.4 "Roboto", serif;
 	font-weight: 200;
 	max-width: 600px;
@@ -12,11 +9,11 @@ body {
 
 h1 {
 	
-	color: white;
+	color: gray;
 	font: "Roboto", serif;
 	font-size: 26pt;
 	font-weight: 200;
-	margin-bottom: 320px;
+	margin-bottom: 20px;
 }
 
 
@@ -26,3 +23,49 @@ h2 {
 	font-weight: 200;
 
 }
+.circular {
+	width: 400px;
+	height: 400px;
+	border-radius: 450px;
+	-webkit-border-radius: 450px;
+	-moz-border-radius: 450px;
+	background: url("photos/marathon-switzer-apimages.jpg") no-repeat;
+	margin: auto;
+	}
+.question_text {
+	font: "Roboto", serif;
+	font-size: 20pt;
+	font-weight: 200;
+	margin-top: 30px;
+}
+input {
+	font: "Roboto", serif;
+	font-size: 20pt;
+	font-weight: 200;
+	margin-top: 30px;
+}
+
+.myButton {
+   background-color:#e6e6fa  ;
+   -moz-border-radius:28px;
+   -webkit-border-radius:28px;
+   border-radius:28px;
+   border:1px solid #e6e6fc  ;
+   display:inline-block;
+   cursor:pointer;
+   color: gray  ;
+   font-family:Roboto;
+   font-size:17px;
+   padding:16px 31px;
+   text-decoration:none;
+   text-shadow:0px 1px 0px #e6e6fa  ;
+}
+.myButton:hover {
+   background-color:#e6e6fa  ;
+}
+.myButton:active {
+   position:relative;
+   top:1px;
+}
+
+
