--- a/questions.css
+++ b/questions.css
@@ -2,7 +2,7 @@ body {
 	background: #f0ffff;
 	font: 12pt/1.4 "Roboto", serif;
 	font-weight: 200;
-	max-width: 600px;
+	max-width: 620px;
 	margin: auto;
 	padding:20px;
 }
@@ -23,14 +23,16 @@ h2 {
 	font-weight: 200;
 
 }
+
 .circular {
 	width: 400px;
 	height: 400px;
 	border-radius: 450px;
 	-webkit-border-radius: 450px;
 	-moz-border-radius: 450px;
-	background: url("photos/marathon-switzer-apimages.jpg") no-repeat;
-	margin: auto;
+	display: block;
+    margin-left: auto;
+    margin-right: auto; 
 	}
 .question_text {
 	font: "Roboto", serif;
@@ -53,9 +55,9 @@ input {
    border:1px solid #e6e6fc  ;
    display:inline-block;
    cursor:pointer;
-   color: gray  ;
+   color: black  ;
    font-family:Roboto;
-   font-size:17px;
+   font-size:20px;
    padding:16px 31px;
    text-decoration:none;
    text-shadow:0px 1px 0px #e6e6fa  ;
@@ -66,6 +68,11 @@ input {
 .myButton:active {
    position:relative;
    top:1px;
+}
+
+.photo_credit {
+	font: "Roboto", serif;
+	font-size:10pt;
 }
 
 
